--- a/documentation.html
+++ b/documentation.html
@@ -23,7 +23,7 @@
       <div class="mt-2">
         <h2 class="text-lg font-semibold">Introduction</h2>
         <p class="text-base my-2">
-          Welcome to the Team Chill LL(1) Parser! This project implements an LL(1) parser for context-free grammars. LL(1) parsers are top-down parsers that use a single lookahead symbol to make parsing decisions. This parser analyzes a string of symbols and checks whether it can be derived from a given context-free grammar, displaying the result as Accepted or Rejected.
+          Welcome to the Parsing Context-Free Grammars This project implements an LL(1) parser for context-free grammars. LL(1) parsers are top-down parsers that use a single lookahead symbol to make parsing decisions. This parser analyzes a string of symbols and checks whether it can be derived from a given context-free grammar, displaying the result as Accepted or Rejected.
         </p>
       </div>
 
